feat: ensure listing of clients and transactions performed by them
