# api/routers/v1/routers.client.js
@@ -1,0 +1,5 @@
+const clientController = require('../../controllers/controllers.client')
+
+module.exports = (router) => {
+  router.route('/client').get(clientController.listAllClientsController)
+}
